<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    >

    <TextView
        android:id="@+id/tv_app_name_loggin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="#FFFEFE"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/im_logo_loggin"
        android:layout_width="204dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_account"
        android:textColor="#F4F4F4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <ImageView
        android:id="@+id/im_iconos"
        android:layout_width="117dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_logo_loggin"
        app:layout_constraintVertical_bias="0.429"
        app:srcCompat="@mipmap/iconos_foreground" />

    <EditText
        android:id="@+id/et_passwordLoggin"
        style="@style/EditTextRounded"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/et_userLoggin"
        style="@style/EditTextRounded"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/tv_welcome_text_loggin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_text_loggin"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/btt_loggin_google"
        android:layout_width="307dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:drawableStart="@drawable/google"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:insetTop="1dp"
        android:text="@string/google_loggin"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:icon="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btt_loggin"
        android:layout_width="307dp"
        android:layout_height="85dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/loggin"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btt_registerLoggin"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/btt_recoverpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/password_lost"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

</androidx.constraintlayout.widget.ConstraintLayout>