<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/red"




    >

    <ImageView
        android:id="@+id/iv_logo_recover"
        android:layout_width="263dp"
        android:layout_height="275dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_recover_text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/recover_password_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <EditText
        android:id="@+id/et_emailRecover"
        style="@style/EditTextRounded"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/btt_recover"
        android:layout_width="307dp"
        android:layout_height="85dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/recover_password_button"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btt_backMenuRecover"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>