<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    >


    <TextView
        android:id="@+id/tv_appNameEdit"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/et_phoneRegister"
        style="@style/EditTextRounded"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="phone"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/et_passwordRegister"
        style="@style/EditTextRounded"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <EditText
        android:id="@+id/et_nameRegister"
        style="@style/EditTextRounded"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <CheckBox
        android:id="@+id/cb_termsConditionsRegister"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/text_termsandconditions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <ImageView
        android:id="@+id/iv_logoRegister"
        android:layout_width="160dp"
        android:layout_height="127dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_confirmPasswordRegister"
        style="@style/EditTextRounded"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <Button
        android:id="@+id/btt_completeRegister"
        android:layout_width="307dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/complete_register"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/et_lastnameRegister"
        style="@style/EditTextRounded"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Lastname"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <EditText
        android:id="@+id/et_emailRegister"
        style="@style/EditTextRounded"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <TextView
        android:id="@+id/tv_textRegister"
        android:layout_width="340dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <Button
        android:id="@+id/btt_backMenuRegister"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>